--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-A personal kitchen sink.
+<h1>A personal kitchen sink.</h1>
+<p>Drag the following link into your Bookmarks Bar for a clean search on Javascript</p>
+<a href="javascript:i=prompt('Search JS for');if(i)location.href='https://www.google.com/search?q='+escape(i)+' -angular -vue -ember -react -jquery';">JS</a>
+<p>
+  <script src="https://gist.github.com/alesvaupotic/bbafa14d367c51301e99e00087a7ab4a.js"></script>
+</p>
+
+<p>Drag the following link into your Bookmarks Bar for a Laravel Docs Search</p>
+<a href="javascript:i=prompt('Search Laravel 5.6 Docs for');if(i)location.href='https://www.google.com/search?q=site:laravel.com/docs/5.6 '+escape(i);">L56 Docs</a>
+<p>
+  <script src="https://gist.github.com/alesvaupotic/0b4a83c26223e40edc44aa85fdb66e9a.js"></script>  
+</p>
