--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>A personal kitchen sink.</h1>
 <p>Drag the following link into your Bookmarks Bar for a clean search on Javascript</p>
-<a href="javascript:i=prompt('Search JS for');if(i)location.href='https://www.google.com/search?q='+escape(i)+' -angular -vue -ember -react -jquery';">JS</a>
+<a href="javascript:i=prompt('Search Google for JS');if(i)location.href='https://www.google.com/search?q='+escape(i)+' -angular -vue -ember -react -jquery';">JS</a>
 <p>
   <script src="https://gist.github.com/alesvaupotic/bbafa14d367c51301e99e00087a7ab4a.js"></script>
 </p>
