--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>A personal kitchen sink.</h1>
-<p>Drag the following link into your Bookmarks Bar</p>
+<p>Drag the following link into your Bookmarks Bar for a Google search on JS in last two years</p>
 <a href="javascript:i=prompt('Search Google for JS in last two years');if(i)location.href='https://www.google.com/search?q='+escape(i)+' -angular -vue -ember -react -jquery js javascript after:'+((new Date()).getFullYear()-2)+'-01-01';">JS</a>
 <p>
   <script src="https://gist.github.com/alesvaupotic/23a29dc5a0b227b5b627e18cd16d56dc.js"></script>
