--- a/laravel-search/index.html
+++ b/laravel-search/index.html
@@ -1,2 +1,2 @@
 <p>Drag the following link into your Bookmarks Bar</p>
-<a href="javascript:i=prompt('Search Laravel 7 Docs for');if(i)location.href='https://www.google.com/search?q=site:laravel.com/docs/7 '+escape(i);">L7 Docs</a>
+<a href="javascript:i=prompt('Search Laravel 7 Docs for');if(i)location.href='https://www.google.com/search?q=site:laravel.com/docs/7.x '+escape(i);">L7 Docs</a>
