--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </p>
 
 <p>Drag the following link into your Bookmarks Bar for a Laravel Docs Search</p>
-<a href="javascript:i=prompt('Search Laravel 5.6 Docs for');if(i)location.href='https://www.google.com/search?q=site:laravel.com/docs/5.6 '+escape(i);">L56 Docs</a>
+<a href="javascript:i=prompt('Search Laravel 7 Docs for');if(i)location.href='https://www.google.com/search?q=site:laravel.com/docs/7.x '+escape(i);">L56 Docs</a>
 <p>
   <script src="https://gist.github.com/alesvaupotic/0b4a83c26223e40edc44aa85fdb66e9a.js"></script>  
 </p>
